<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsAuthentication.LoginFragment"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_100dp"
        android:text="@string/indikascam"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title_40sp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginFragment_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginFragment_et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="joko.han1201@gmail.com"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginFragment_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:passwordToggleEnabled="true"
        android:hint="@string/kata_sandi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginFragment_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="omnomnom"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginFragment_tv_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_gravity="end"
        android:text="@string/ganti_kata_sandi"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loginFragment_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:layout_marginBottom="@dimen/dimen_8dp"/>

    <TextView
        android:id="@+id/loginFragment_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/belum_punya_akun_klik_disini"/>

    <ImageView
        android:id="@+id/loginFragment_iv_dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>