<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:layout_margin="20dp"
        android:src="@drawable/thank_you_for_reporting"
        android:contentDescription="@string/thank_you_for_reporting_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/thank_you_for_reporting_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/slogan_indikascam"/>

    <Button
        android:id="@+id/dialogThankYou_btn_tutup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/tutup"/>

</LinearLayout>