<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_list_laporan"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:strokeWidth="1dp"
    android:layout_margin="@dimen/dimen_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_laporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_laporan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_laporan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/item_laporan_reportType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penipuan"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintTop_toBottomOf="@id/item_laporan_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/item_laporan_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tanggal"/>

        <TextView
            android:id="@+id/item_laporan_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diterima"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold|italic"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>