<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsAuthentication.ChangePasswordFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="@dimen/dimen_20dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:src="@drawable/ic_lock_reset"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah_kata_sandi"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title_40sp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_email_akun_anda_untuk_mengatur_ulang_kata_sandi"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordFragment_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePasswordFragment_et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/changePasswordFragment_btn_changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atur_ulang_kata_sandi"
        android:textAllCaps="false"/>

</LinearLayout>