<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsAuthentication.RegisterFragment"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_akun"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title_40sp"
        android:layout_marginVertical="@dimen/dimen_80dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerFragment_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_profile"
        android:hint="@string/nama_lengkap"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerFragment_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerFragment_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:passwordToggleEnabled="true"
        android:hint="@string/kata_sandi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerFragment_til_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:passwordToggleEnabled="true"
        android:hint="@string/konfirmasi_kata_sandi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_et_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerFragment_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar"/>

</LinearLayout>