<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <View
        android:layout_width="450dp"
        android:layout_height="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berikut_statistik_dari_seluruh_laporan_yang_masuk"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:strokeWidth="1dp"
        android:layout_marginHorizontal="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_report"
                app:tint="@color/design_default_color_error"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_kerugian"
                android:layout_marginTop="4dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dialogStatistic_tv_totalLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/platform_dengan_kasus_penipuan_terbanyak"
        android:textStyle="italic"
        android:layout_marginTop="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialogStatistic_rcv_platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/produk_yang_paling_sering_digunakan_sebagai_modus"
        android:textStyle="italic"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialogStatistic_rcv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/statisticsDialogFragment_btn_mulaiBlokir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        android:text="@string/mulai_blokir"/>

</LinearLayout>